1. Улучшения Collection API [#296361]